fix: delete-icon ierarhie

--- a/colire/src/components/css/palette-box.css
+++ b/colire/src/components/css/palette-box.css
@@ -1,11 +1,17 @@
-.palette-box {
-  width: calc(2.5rem * 5);
-  padding: 2.5rem;
+.palette-box-container {
+  width: calc(2.5rem * 5 + 2.5rem * 2);
   position: relative;
-  box-sizing: content-box;
   filter: url(#filter);
   -webkit-filter: url(#filter);
 }
+.palette-box {
+  width: 100%;
+  padding: 2.5rem;
+  display: block;
+}
+
+
+
 .palette-box-name {
   width: 100%;
   height: 2rem;
@@ -22,12 +28,15 @@
   transition: 0.2s ease-out;
   overflow: hidden;
 }
+.palette-box-container:hover .palette-box-content {
+  transform: scale(1.05);
+}
+
+
+
 .palette-box-color {
   width: 2.5rem;
   height: 2rem;
-}
-.palette-box:hover .palette-box-content {
-  transform: scale(1.05);
 }
 
 
@@ -36,12 +45,13 @@
   position: absolute;
   right: calc(2.5rem - 40px);
   top: 2.5rem;
+  cursor: pointer;
 }
 .use-line {
   transform-origin: center;
   transform: scale(0);
   transition: 0.2s ease-out;
 }
-.palette-box:hover .use-line {
+.palette-box-container:hover .use-line {
   transform: scale(1);
 }
